# ekm4android

./: README.md
android/app/: build.gradle  proguard-rules.pro
android/app/src/androidTest/java/spheras/org/ekm4android/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/spheras/org/ekm4android/: AcceptThread.java  MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/spheras/org/ekm4android/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
pc/: meson.build
pc/data/: Application.css  css.gresource.xml  org.spheras.ekm4android.appdata.xml  org.spheras.ekm4android.desktop  org.spheras.ekm4android.gschema.xml
pc/etc/: tips
pc/src/: Application.vala
pc/src/dialogs/: MainWindow.vala  MainWindow_experiment.vala  ShapedWindow.vala
pc/src/indicators/: Indicator.vala
pc/src/services/: Adapter.vala  Device.vala  Manager.vala
pc/src/widgets/: DisplayWidget.vala  PopoverWidget.vala
